# FreeCAD-Assembly2MuJoCo

./: .gitignore  .pre-commit-config.yaml  AssemblyExportToMuJoCo.FCMacro  CHANGELOG.md  README.md  freecad_to_mujoco.FCMacro  freecad_to_mujoco.py  package.xml  pyproject.toml
.github/actions/python/: action.yml
.github/workflows/: main.yml
examples/: README.md
examples/crank_and_slider/: crank_and_slider_assembly.FCStd
examples/universal_joint/: .gitignore  universal_joint_assembly.FCStd  universal_joint_export.webm
freecad/assembly2mujoco/: constants.py  init_gui.py
freecad/assembly2mujoco/commands/: __init__.py  export_command.py  export_panel.py
freecad/assembly2mujoco/core/: assembly_parser.py  mujoco_exporter.py
freecad/assembly2mujoco/utils/: helpers.py  types.py
src/: InitGui.py  constants.py  init_gui.py
src/commands/: __init__.py  base.py  export_command.py  export_panel.py
src/core/: assembly_parser.py  mujoco_exporter.py
src/utils/: helpers.py  types.py
